# cloudsec-rag-eval

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline.json  high_recall_top5.json  official_notes.json  official_notes_top5.json
data/: doc_manifest.json
data/eval_sets/: cloudsec_eval_v1.jsonl  cloudsec_official_notes_eval_v1.jsonl
data/processed/: .gitkeep
data/raw_docs/: README.md  aws_cloudtrail_official_notes.md  aws_iam_best_practices.md  aws_iam_official_notes.md  aws_logging_monitoring.md  incident_response_basics.md  nist_sp800_61r3_official_notes.md
docs/: eval_protocol.md  interview_notes.md  interview_walkthrough.md
examples/: official_notes_top5_summary.md
prompts/: answer_v1.txt  faithfulness_judge_v1.txt
reports/examples/: README.md  official_notes_2026-05-25_summary.md  official_notes_top5_2026-05-25_summary.md
reports/summaries/: .gitkeep
scripts/: ask.py  build_index.py  check_regression.py  compare_runs.py  export_report.py  ingest_docs.py  run_eval.py
src/cloudsec_rag/: __init__.py  chunk.py  compare_runs.py  config.py  embed.py  evaluate_answers.py  evaluate_retrieval.py  export_report.py  generate.py  index_store.py  ingest.py  llm_client.py  metrics.py  retrieve.py  run_eval.py  schemas.py
tests/: test_chunk.py  test_compare_runs.py  test_config.py  test_eval_sets.py  test_evaluate_answers.py  test_export_report.py  test_index_store.py  test_ingest.py  test_metrics.py  test_schemas.py
tests/fixtures/: sample_doc.md  sample_eval_set.jsonl
(+2 files in other folders)
