[tool.poetry]
name = "cloudsec-rag-eval"
version = "0.1.0"
description = "Local production-style RAG evaluation system for cloud security guidance."
authors = ["AI Engineer"]
readme = "README.md"
packages = [{ include = "cloudsec_rag", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "^1.0.0"
pydantic = "^2.9"
pydantic-settings = "^2.6"
openai = "^1.0.0"
rich = "^13.0"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^8.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
